[package]
name = "evoting-shared"
version = "0.1.0"
authors = ["Bryan McClain <bamcclain10@gmail.com>"]
edition = "2018"

[dependencies]
actix-codec = "0.3.0"
actix-http = "2.2.1"
actix-web = { version = "3", features = ["openssl"] }
actix-web-httpauth = "0.5.1"
anyhow = "1.0.44"
awc = "2.0.3"
bigdecimal = { version = "0.1.2", features = ["serde"] }
censor = "0.2.0"
chrono = "0.4.19"
curv-kzen = { package = "curv-kzen", version = "0.9.0" }
diesel = { version = "1.4.8", features = ["postgres", "extras"] }
futures = "0.3.17"
http = "0.2.5"
http-serde = "1.0.3"
jsonwebtoken = "7.2.0"
kzen-paillier = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.14"
num = "0.2.1"
paste = "1.0.5"
serde = "1.0.130"
serde_json = "1.0.68"
serde_repr = "0.1.7"
uuid = "0.6"
uuid-b64 = { version = "0.1.1", features = ["serde", "diesel-uuid"] }

[package.metadata.cargo-udeps.ignore]
normal = ["paste"]
